Fix Transition tab options label color in dark mode
- button label color seems to be not set before this patch
- this patch will fix the label visibility problem in dark mode

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -248,6 +248,7 @@ html[data-theme='dark'] .savemodified.unotoolbutton .unobutton img {
 	align-items: center;
 	justify-items: center;
 	width: max-content;
+	color: var(--color-main-text);
 }
 
 /* unobuttons */
